welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:16: error: not found: value FaireCarre
 {FaireCarre()}
  ^